<resources>
    <string name="app_name">MyCalendar</string>
    <string name="Sunday_string_name">Sun</string>
    <string name="Monday_string_name">Mon</string>
    <string name="Tuesday_string_name">Tue</string>
    <string name="Wednesday_string_name">Wed</string>
    <string name="Thursday_string_name">Thu</string>
    <string name="Friday_string_name">Fri</string>
    <string name="Saturday_string_name">Sat</string>
    <string name="on_duty_string">On Duty Time</string>
    <string name="off_duty_string">Off Duty Time</string>
    <string name="btn_ok_string">OK</string>
    <string name="btn_cancel_string">CANCEL</string>

    <string name="worked_time_string">You have worked %1$s hours this day</string>
    <string name="worked_no_data_string">Sorry, no data</string>

    <string name="holiday_string">休</string>
</resources>
