<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingEnd="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:id="@+id/calendar_header">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/btnPreMonth"
            android:layout_alignParentStart="true"
            android:src="@drawable/left"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/btnNextMonth"
            android:layout_alignParentEnd="true"
            android:src="@drawable/right"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/txtDate"
            android:gravity="center_horizontal|center_vertical"
            android:layout_toStartOf="@id/btnNextMonth"
            android:layout_toEndOf="@id/btnPreMonth"
            android:text="JLY 2018"
            android:textSize="@dimen/text_size"
            android:textColor="@color/color_month_name"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/calendar_week_header"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/Sunday_string_name"
            android:textSize="@dimen/text_size"
            android:textColor="@color/color_week_name"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/Monday_string_name"
            android:textSize="@dimen/text_size"
            android:textColor="@color/color_week_name"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/Tuesday_string_name"
            android:textSize="@dimen/text_size"
            android:textColor="@color/color_week_name"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/Wednesday_string_name"
            android:textSize="@dimen/text_size"
            android:textColor="@color/color_week_name"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/Thursday_string_name"
            android:textSize="@dimen/text_size"
            android:textColor="@color/color_week_name"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/Friday_string_name"
            android:textSize="@dimen/text_size"
            android:textColor="@color/color_week_name"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/Saturday_string_name"
            android:textSize="@dimen/text_size"
            android:textColor="@color/color_week_name"/>

    </LinearLayout>

    <GridView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/calendar_grid"
        android:numColumns="7"/>
</LinearLayout>
